[gd_scene load_steps=17 format=2]

[ext_resource path="res://new_theme_mm.tres" type="Theme" id=1]
[ext_resource path="res://sprites/title.png" type="Texture" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]
[ext_resource path="res://sprites/shat_progress_0_l.png" type="Texture" id=4]
[ext_resource path="res://sprites/shat_progress_3.png" type="Texture" id=5]
[ext_resource path="res://sprites/shat_progress_1.png" type="Texture" id=6]
[ext_resource path="res://sprites/shat_progress_2.png" type="Texture" id=7]
[ext_resource path="res://bgm/titlescreen.ogg" type="AudioStream" id=8]
[ext_resource path="res://sfx/ui_choose.wav" type="AudioStream" id=9]
[ext_resource path="res://sprites/shat_progress_4.png" type="Texture" id=10]
[ext_resource path="res://sprites/end_progress_0.png" type="Texture" id=11]
[ext_resource path="res://sprites/end_progress_3.png" type="Texture" id=12]
[ext_resource path="res://sprites/end_progress_1.png" type="Texture" id=13]
[ext_resource path="res://sprites/end_progress_2.png" type="Texture" id=14]
[ext_resource path="res://sprites/title_end.png" type="Texture" id=15]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
stretch_mode = 5

[node name="TitleEnd" type="TextureRect" parent="CanvasLayer/Control/TextureRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )

[node name="Button_Start" type="Button" parent="CanvasLayer/Control/TextureRect"]
margin_left = 137.0
margin_top = 300.0
margin_right = 346.0
margin_bottom = 380.0
focus_neighbour_right = NodePath("../Button_Final")
focus_neighbour_bottom = NodePath("../Button_Extra")
custom_styles/normal = SubResource( 1 )
text = "Start"

[node name="Button_Final" type="Button" parent="CanvasLayer/Control/TextureRect"]
margin_left = 448.0
margin_top = 300.0
margin_right = 660.0
margin_bottom = 380.0
focus_neighbour_left = NodePath("../Button_Start")
focus_neighbour_bottom = NodePath("../Button_Forget")
custom_styles/normal = SubResource( 1 )
disabled = true
text = "Final"

[node name="Button_Extra" type="Button" parent="CanvasLayer/Control/TextureRect"]
margin_left = 137.0
margin_top = 400.0
margin_right = 349.0
margin_bottom = 480.0
focus_neighbour_top = NodePath("../Button_Start")
focus_neighbour_right = NodePath("../Button_Forget")
disabled = true
text = "Extra"

[node name="Button_Forget" type="Button" parent="CanvasLayer/Control/TextureRect"]
margin_left = 422.0
margin_top = 400.0
margin_right = 677.0
margin_bottom = 480.0
focus_neighbour_left = NodePath("../Button_Extra")
focus_neighbour_top = NodePath("../Button_Final")
text = "Forget"

[node name="Shattered1" type="TextureRect" parent="CanvasLayer/Control/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -604.0
margin_top = 544.0
margin_right = -456.0
margin_bottom = 692.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="SImg1" type="TextureRect" parent="CanvasLayer/Control/TextureRect/Shattered1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
stretch_mode = 5

[node name="End1" type="TextureRect" parent="CanvasLayer/Control/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 282.0
margin_top = 80.0
margin_right = 372.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="EImg1" type="TextureRect" parent="CanvasLayer/Control/TextureRect/End1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 13 )
stretch_mode = 5

[node name="End2" type="TextureRect" parent="CanvasLayer/Control/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 402.0
margin_top = 80.0
margin_right = 492.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="EImg2" type="TextureRect" parent="CanvasLayer/Control/TextureRect/End2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 14 )
stretch_mode = 5

[node name="End3" type="TextureRect" parent="CanvasLayer/Control/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 522.0
margin_top = 80.0
margin_right = 612.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="EImg3" type="TextureRect" parent="CanvasLayer/Control/TextureRect/End3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 12 )
stretch_mode = 5

[node name="Shattered2" type="TextureRect" parent="CanvasLayer/Control/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -420.0
margin_top = 544.0
margin_right = -272.0
margin_bottom = 692.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="SImg2" type="TextureRect" parent="CanvasLayer/Control/TextureRect/Shattered2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 5

[node name="ExtraDone" type="TextureRect" parent="CanvasLayer/Control/TextureRect"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -49.0
margin_top = 516.0
margin_right = 127.0
margin_bottom = 692.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="EImg" type="TextureRect" parent="CanvasLayer/Control/TextureRect/ExtraDone"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
stretch_mode = 5

[node name="Shattered3" type="TextureRect" parent="CanvasLayer/Control/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_top = 544.0
margin_right = -92.0
margin_bottom = 692.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="SImg3" type="TextureRect" parent="CanvasLayer/Control/TextureRect/Shattered3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="AudioGUI" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="focus_entered" from="CanvasLayer/Control/TextureRect/Button_Start" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control/TextureRect/Button_Start" to="." method="_on_Button_Start_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control/TextureRect/Button_Final" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control/TextureRect/Button_Final" to="." method="_on_Button_Final_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control/TextureRect/Button_Extra" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control/TextureRect/Button_Extra" to="." method="_on_Button_Extra_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control/TextureRect/Button_Forget" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control/TextureRect/Button_Forget" to="." method="_on_Button_Forget_pressed"]
